feat: 实现添加套餐商品功能
